Refactor backend to use MongoDB with Mongoose; replace Sequelize, update authentication middleware, and restructure user and property models

--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,4 @@
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=Mhndsameh1!
-DB_NAME=realestate
+MONGODB_URL=mongodb://127.0.0.1:27017/realestate
 JWT_SECRET=realestate_secret
 PORT=5000
 NODE_ENV=development
